# Advanced-AI-Coursework-II

./: .gitignore  README.md  bot_main.py  config.py  data_loader.py  incident_handler.py  intent_handlers.py  llm_client.py  main.py  national_rail_api.py  nlp_utils.py  pyproject.toml  requirements.txt  task_2.ipynb  task_2_predictive_modelling.py  task_3.ipynb  task_3_indexing.ipynb  task_3_rag.ipynb  task_3_rag.py  ticket_finder.py
data/: sentences.txt
expert/: __init__.py  _compat.py  facts.py  plan_retriever.py  slot_parser.py
indexing/: data_chunker.py  doc_parser.py  image_prompts.py  resumable_indexer.py  slide_renderer.py  vector_store.py
task_2/: build_journey_lookup.py  delay_tool.py  historical_lookup.py  task_2_separate.ipynb  utils.py
task_2/models/: hgb_wat2wey.joblib  hgb_wey2wat.joblib  xgb_wat2wey.joblib  xgb_wey2wat.joblib
task_2/train_historical_data/: journey_metrics_lookup.csv
task_3/: incident_handler.py  task_3_indexing.ipynb
task_3/expert/: __init__.py  facts.py  incident_engine.py  nlp_slots.py  plan_retriever.py  response_builder.py  slot_parser.py  station_index.py
task_3/indexing/: data_chunker.py  doc_parser.py  image_prompts.py  resumable_indexer.py  slide_renderer.py  vector_store.py
