[project]
name = "aai-coursework-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keras>=3.14.0",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "openrouter>=0.9.1",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
    "tensorflow>=2.21.0",
]
